@startuml
title Diagrama Entidad-Relación (ER)\nModelo actual - Technology Cuchito

hide methods
skinparam linetype ortho
skinparam roundcorner 10

entity "usuarios" as usuarios {
  * id : INTEGER <<PK>>
  --
  nombre : STRING(100)
  email : STRING(100) <<UNIQUE>>
  password : STRING(255)
  rol : ENUM(administrador,\nencargado_almacen,\nusuario_operativo)
  almacenAsignadoId : INTEGER <<FK>>
  telefono : STRING(20)
  estado : BOOLEAN
  createdAt : DATE
  updatedAt : DATE
}

entity "almacenes" as almacenes {
  * id : INTEGER <<PK>>
  --
  nombre : STRING(100)
  codigo : STRING(20) <<UNIQUE>>
  direccion : STRING(200)
  ciudad : STRING(50)
  capacidad : INTEGER
  encargadoId : INTEGER <<FK>>
  estado : BOOLEAN
  createdAt : DATE
  updatedAt : DATE
}

entity "categorias" as categorias {
  * id : INTEGER <<PK>>
  --
  nombre : STRING(100) <<UNIQUE>>
  descripcion : TEXT
  estado : BOOLEAN
  createdAt : DATE
  updatedAt : DATE
}

entity "proveedores" as proveedores {
  * id : INTEGER <<PK>>
  --
  nombre : STRING(150)
  ruc : STRING(11) <<UNIQUE>>
  direccion : STRING(200)
  telefono : STRING(20)
  email : STRING(100)
  contacto : STRING(100)
  estado : BOOLEAN
  createdAt : DATE
  updatedAt : DATE
}

entity "productos" as productos {
  * id : INTEGER <<PK>>
  --
  codigo : STRING(50) <<UNIQUE>>
  nombre : STRING(200)
  descripcion : TEXT
  categoriaId : INTEGER <<FK>>
  proveedorId : INTEGER <<FK>>
  precioCompra : DECIMAL(10,2)
  precioVenta : DECIMAL(10,2)
  unidadMedida : STRING(20)
  stockMinimo : INTEGER
  stockMaximo : INTEGER
  imagen : STRING(255)
  estado : BOOLEAN
  createdAt : DATE
  updatedAt : DATE
}

entity "inventario" as inventario {
  * id : INTEGER <<PK>>
  --
  productoId : INTEGER <<FK>>
  almacenId : INTEGER <<FK>>
  cantidad : INTEGER
  ultimaActualizacion : DATE
  createdAt : DATE
  updatedAt : DATE
  --
  UNIQUE(productoId, almacenId)
}

entity "movimientos" as movimientos {
  * id : INTEGER <<PK>>
  --
  tipo : ENUM(entrada,\nsalida,\ntransferencia,\najuste)
  productoId : INTEGER <<FK>>
  almacenOrigenId : INTEGER <<FK>>
  almacenDestinoId : INTEGER <<FK>>
  cantidad : INTEGER
  motivo : STRING(200)
  usuarioId : INTEGER <<FK>>
  numeroDocumento : STRING(50)
  fecha : DATE
  createdAt : DATE
  updatedAt : DATE
}

entity "auditoria" as auditoria {
  * id : INTEGER <<PK>>
  --
  usuarioId : INTEGER <<FK>>
  accion : STRING(50)
  entidad : STRING(50)
  entidadId : INTEGER
  detalles : TEXT
  ipAddress : STRING(45)
  fecha : DATE
  createdAt : DATE
  updatedAt : DATE
}

categorias ||--o{ productos : "categoriaId"
proveedores ||--o{ productos : "proveedorId"

productos ||--o{ inventario : "productoId"
almacenes ||--o{ inventario : "almacenId"

productos ||--o{ movimientos : "productoId"
almacenes ||--o{ movimientos : "almacenOrigenId"
almacenes ||--o{ movimientos : "almacenDestinoId"
usuarios ||--o{ movimientos : "usuarioId"

usuarios ||--o{ auditoria : "usuarioId"

usuarios ||--o{ almacenes : "encargadoId"
almacenes ||--o{ usuarios : "almacenAsignadoId"

note right of inventario
Tabla de stock por producto y almacén.
Clave única: (productoId, almacenId).
end note

note right of movimientos
Las transferencias usan origen y destino.
Las salidas requieren stock suficiente.
El tipo permitido depende del rol.
end note

note right of auditoria
Se registra LOGIN, CREAR_MOVIMIENTO,
CONFIGURACION_PERMISOS, etc.
end note

@enduml
